--- a/MobileIOSAssigment/ListItemCollectionViewCell.xib
+++ b/MobileIOSAssigment/ListItemCollectionViewCell.xib
@@ -10,67 +10,64 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="listItem" id="gTV-IL-0wX" customClass="ListItemCollectionViewCell" customModule="MobileIOSAssigment" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="449" height="528"/>
+            <rect key="frame" x="0.0" y="0.0" width="450" height="469"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="449" height="528"/>
+                <rect key="frame" x="0.0" y="0.0" width="450" height="469"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="bottom" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xO9-nj-NS7">
-                        <rect key="frame" x="72" y="54" width="264" height="391.33333333333331"/>
+                    <stackView opaque="NO" contentMode="center" fixedFrame="YES" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="6Oo-5w-OAR">
+                        <rect key="frame" x="92" y="57" width="268" height="343.33333333333331"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selectImage.png" translatesAutoresizingMaskIntoConstraints="NO" id="BYk-c9-iFo">
-                                <rect key="frame" x="0.0" y="0.0" width="264" height="300"/>
-                                <gestureRecognizers/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6m-jW-MTj">
-                                <rect key="frame" x="212" y="305" width="52" height="38"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="Like" imagePlacement="top"/>
-                                <connections>
-                                    <action selector="likeClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="oSO-uF-DMZ"/>
-                                </connections>
-                            </button>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="LbX-Q9-CXA">
-                                <rect key="frame" x="125.66666666666667" y="348" width="138.33333333333331" height="43.333333333333314"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="-48" translatesAutoresizingMaskIntoConstraints="NO" id="rUe-19-Ida">
+                                <rect key="frame" x="0.0" y="0.0" width="268" height="300"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fm9-8u-Qyg">
-                                        <rect key="frame" x="0.0" y="0.0" width="138.33333333333334" height="19"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="4Fr-sb-QGS">
-                                                <rect key="frame" x="0.0" y="0.0" width="32" height="19"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="32" id="Bu9-OB-T1J"/>
-                                                </constraints>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.98" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCg-9I-A0n">
-                                                <rect key="frame" x="36.999999999999986" y="0.0" width="26" height="19"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(237 Yorum)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzs-51-G70">
-                                                <rect key="frame" x="68" y="0.0" width="70.333333333333314" height="19"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BTT-Z0-3Bm">
-                                        <rect key="frame" x="0.0" y="28.999999999999996" width="138.33333333333334" height="14.333333333333332"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="View" translatesAutoresizingMaskIntoConstraints="NO" id="FJh-rQ-hn1">
-                                                <rect key="frame" x="0.0" y="0.0" width="18" height="14.333333333333334"/>
-                                            </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25K (Görüntülenme)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fB-Hh-Kqu">
-                                                <rect key="frame" x="22.999999999999993" y="0.0" width="115.33333333333331" height="14.333333333333334"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selectImage.png" translatesAutoresizingMaskIntoConstraints="NO" id="BYk-c9-iFo">
+                                        <rect key="frame" x="0.0" y="0.0" width="264" height="300"/>
+                                        <gestureRecognizers/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6m-jW-MTj">
+                                        <rect key="frame" x="216" y="0.0" width="52" height="38"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="Like" imagePlacement="top"/>
+                                        <connections>
+                                            <action selector="likeClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="oSO-uF-DMZ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="left" alignment="center" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fm9-8u-Qyg">
+                                <rect key="frame" x="0.0" y="305" width="116.33333333333333" height="19"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="4Fr-sb-QGS">
+                                        <rect key="frame" x="0.0" y="0.0" width="20" height="19"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.98" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCg-9I-A0n">
+                                        <rect key="frame" x="20" y="2.3333333333333153" width="26" height="14.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(237 Yorum)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzs-51-G70">
+                                        <rect key="frame" x="45.999999999999993" y="2.3333333333333153" width="70.333333333333314" height="14.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BTT-Z0-3Bm">
+                                <rect key="frame" x="0.0" y="329" width="138.33333333333334" height="14.333333333333314"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="View" translatesAutoresizingMaskIntoConstraints="NO" id="FJh-rQ-hn1">
+                                        <rect key="frame" x="0.0" y="0.0" width="18" height="14.333333333333334"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25K (Görüntülenme)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fB-Hh-Kqu">
+                                        <rect key="frame" x="22.999999999999993" y="0.0" width="115.33333333333331" height="14.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -79,7 +76,7 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <size key="customSize" width="449" height="528"/>
+            <size key="customSize" width="455" height="490"/>
             <connections>
                 <outlet property="comments" destination="nzs-51-G70" id="qaO-l7-Dnd"/>
                 <outlet property="imageView" destination="BYk-c9-iFo" id="AXv-5W-iA3"/>
@@ -87,7 +84,7 @@
                 <outlet property="likes" destination="wCg-9I-A0n" id="e3A-2Q-LZf"/>
                 <outlet property="views" destination="3fB-Hh-Kqu" id="xkJ-u6-in5"/>
             </connections>
-            <point key="canvasLocation" x="310.68702290076334" y="91.549295774647888"/>
+            <point key="canvasLocation" x="96" y="152"/>
         </collectionViewCell>
     </objects>
     <resources>
