--- a/MobileIOSAssigment/ListItemCollectionViewCell.xib
+++ b/MobileIOSAssigment/ListItemCollectionViewCell.xib
@@ -33,7 +33,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6m-jW-MTj">
                                         <rect key="frame" x="104" y="0.0" width="52" height="38"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="Like" imagePlacement="top" imagePadding="0.0"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="dislike" imagePlacement="top" imagePadding="0.0"/>
                                         <connections>
                                             <action selector="likeClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="oSO-uF-DMZ"/>
                                         </connections>
@@ -92,9 +92,9 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="Like" width="28" height="24"/>
         <image name="Star" width="20" height="19"/>
         <image name="View" width="18" height="13"/>
+        <image name="dislike" width="28" height="24"/>
         <image name="selectImage" width="264" height="300"/>
     </resources>
 </document>
